# teapot

./: .mise.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  SECURITY.md  codecov.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  labeler.yml  release.yml  security.yml
.serena/memories/: project_overview.md
examples/: form_demo.rs  layout.rs  styling.rs  theming.rs
src/: error.rs  lib.rs  output.rs
src/components/: confirm.rs  file_picker.rs  footer_hints.rs  list.rs  mod.rs  modal.rs  multi_progress.rs  multi_select.rs  progress.rs  select.rs  spinner.rs  status_badge.rs  tab_bar.rs  table.rs  task_list.rs  task_progress.rs  text_area.rs  text_input.rs  title_bar.rs  viewport.rs
src/forms/: field.rs  form.rs  group.rs  mod.rs  validation.rs
src/runtime/: accessible.rs  command.rs  message.rs  mod.rs  program.rs  subscription.rs
src/style/: border.rs  color.rs  mod.rs  text.rs
src/terminal/: backend.rs  input.rs  mod.rs  output.rs
src/util/: keys.rs  mod.rs  scroll.rs  size.rs  worker.rs
