[package]
name = "teapot"
version = "0.1.0-alpha.1"
edition = "2021"
rust-version = "1.88"
authors = ["InferaDB Team"]
description = "A Rust-native terminal UI framework following the Elm Architecture, inspired by Bubble Tea"
license = "Apache-2.0"
repository = "https://github.com/inferadb/teapot"
readme = "README.md"
keywords = ["tui", "terminal", "bubble-tea", "cli", "teapot", "elm"]
categories = ["command-line-interface", "gui"]

[dependencies]
# Terminal backend
crossterm = "0.28"

# Unicode handling
unicode-width = "0.2"
unicode-segmentation = "1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt"] }

[features]
default = []
