[package]
name = "teapot"
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.92"
authors = ["InferaDB Team"]
description = "A Rust-native terminal UI framework following the Elm Architecture, inspired by Bubble Tea"
license = "MIT OR Apache-2.0"
repository = "https://github.com/inferadb/teapot"
readme = "README.md"
keywords = ["tui", "terminal", "cli", "teapot", "elm"]
categories = ["command-line-interface", "gui"]

[dependencies]
# Builder pattern macros
bon = "3.8"

# Error handling
thiserror = "2"

# Terminal backend
crossterm = "0.29"

# Unicode handling
unicode-width = "0.2"

# Optional serialization
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[lints.rust]
unsafe_code = "deny"
